--- a/index.html
+++ b/index.html
@@ -43,20 +43,57 @@
     <!-- Hero Section -->
     <section id="home" class="hero">
         <div class="hero-content">
-            <h1>Pasindya Chavindee</h1>
-            <h2>IT Undergraduate | Intern QA Engineer At SLT</h2>
-            <p>I'm a passionate second-year undergraduate at SLIIT with expertise in MERN stack, Kotlin, and mobile development. I thrive on creating innovative solutions to real-world problems.</p>
-            <div class="hero-btns">
-                <a href="#contact" class="btn btn-primary">
-                    <i class="fas fa-paper-plane"></i> Contact Me
-                </a>
-                <a href="images/M.A.PasindyaChavindee-SLIIT(CV).pdf" download class="btn btn-outline">
-                    <i class="fas fa-download"></i> Download CV
-                </a>
+            <div class="hero-text-wrapper">
+                <div class="hero-greeting">Hello, I'm</div>
+                <h1 class="hero-name">Pasindya Chavindee</h1>
+                <div class="hero-title-wrapper">
+                    <h2 class="hero-title">
+                        <span class="static-text">IT Undergraduate | </span>
+                        <span class="dynamic-text"></span>
+                    </h2>
+                </div>
+                <p class="hero-description">I'm a passionate second-year undergraduate at SLIIT with expertise in MERN stack, Kotlin, and mobile development. I thrive on creating innovative solutions to real-world problems.</p>
+                <div class="hero-btns">
+                    <a href="#contact" class="btn btn-primary">
+                        <i class="fas fa-paper-plane"></i> Contact Me
+                        <span class="btn-shine"></span>
+                    </a>
+                    <a href="images/M.A.PasindyaChavindee-SLIIT(CV).pdf" download class="btn btn-outline">
+                        <i class="fas fa-download"></i> Download CV
+                        <span class="btn-shine"></span>
+                    </a>
+                </div>
+                <div class="hero-social">
+                    <a href="https://www.linkedin.com/in/pasindya-chavindee-00342223a/" target="_blank" class="social-icon">
+                        <i class="fab fa-linkedin-in"></i>
+                    </a>
+                    <a href="https://github.com/Pasindya" target="_blank" class="social-icon">
+                        <i class="fab fa-github"></i>
+                    </a>
+                </div>
+            </div>
+            <div class="hero-image-wrapper">
+                <div class="hero-image">
+                    <img src="images/mypic2.jpg" alt="Developer working" loading="eager">
+                    <div class="image-shine"></div>
+                </div>
+                <div class="floating-elements">
+                    <div class="floating-element tech-icon"><i class="fab fa-react"></i></div>
+                    <div class="floating-element tech-icon"><i class="fab fa-node-js"></i></div>
+                    <div class="floating-element tech-icon"><i class="fab fa-android"></i></div>
+                    <div class="floating-element tech-icon"><i class="fab fa-java"></i></div>
+                </div>
             </div>
         </div>
-        <div class="hero-image">
-            <img src="images/mypic2.jpg" alt="Developer working" loading="eager">
+        <div class="scroll-indicator">
+            <div class="mouse">
+                <div class="wheel"></div>
+            </div>
+            <div class="arrow">
+                <span></span>
+                <span></span>
+                <span></span>
+            </div>
         </div>
     </section>
 
@@ -950,9 +987,391 @@
                 header.classList.remove('scrolled');
             }
         });
+
+        // Typing animation for dynamic text
+        const dynamicText = document.querySelector('.dynamic-text');
+        const roles = ['Intern QA Engineer', 'MERN Stack Developer', 'Mobile Developer', 'UI/UX Designer'];
+        let roleIndex = 0;
+        let charIndex = 0;
+        let isDeleting = false;
+        let typingDelay = 200;
+
+        function typeEffect() {
+            const currentRole = roles[roleIndex];
+            
+            if (isDeleting) {
+                dynamicText.textContent = currentRole.substring(0, charIndex - 1);
+                charIndex--;
+                typingDelay = 100;
+            } else {
+                dynamicText.textContent = currentRole.substring(0, charIndex + 1);
+                charIndex++;
+                typingDelay = 200;
+            }
+
+            if (!isDeleting && charIndex === currentRole.length) {
+                isDeleting = true;
+                typingDelay = 2000; // Pause at end
+            } else if (isDeleting && charIndex === 0) {
+                isDeleting = false;
+                roleIndex = (roleIndex + 1) % roles.length;
+                typingDelay = 500; // Pause before typing next role
+            }
+
+            setTimeout(typeEffect, typingDelay);
+        }
+
+        // Start typing animation when page loads
+        window.addEventListener('load', typeEffect);
     </script>
 
     <style>
+        /* Hero Section Styles */
+        .hero {
+            min-height: 100vh;
+            position: relative;
+            overflow: hidden;
+            padding: 2rem;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            background: linear-gradient(135deg, #f8f9fa 0%, #e9ecef 100%);
+        }
+
+        .hero-content {
+            max-width: 1200px;
+            width: 100%;
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
+            gap: 4rem;
+            position: relative;
+            z-index: 1;
+        }
+
+        .hero-text-wrapper {
+            flex: 1;
+            animation: fadeInUp 1s ease-out;
+        }
+
+        .hero-greeting {
+            font-size: 1.5rem;
+            color: #2c3e50;
+            margin-bottom: 1rem;
+            font-weight: 500;
+        }
+
+        .hero-name {
+            font-size: 4rem;
+            font-weight: 700;
+            color: #2c3e50;
+            margin-bottom: 1rem;
+            line-height: 1.2;
+            background: linear-gradient(45deg, #3498db, #2ecc71);
+            -webkit-background-clip: text;
+            -webkit-text-fill-color: transparent;
+            animation: gradientFlow 8s ease infinite;
+        }
+
+        .hero-title-wrapper {
+            margin-bottom: 1.5rem;
+        }
+
+        .hero-title {
+            font-size: 2rem;
+            color: #34495e;
+            display: flex;
+            gap: 1rem;
+            align-items: center;
+        }
+
+        .dynamic-text {
+            color: #3498db;
+            position: relative;
+        }
+
+        .dynamic-text::after {
+            content: '|';
+            position: absolute;
+            right: -5px;
+            animation: blink 1s infinite;
+        }
+
+        .hero-description {
+            font-size: 1.1rem;
+            color: #5d6d7e;
+            margin-bottom: 2rem;
+            line-height: 1.6;
+            max-width: 600px;
+        }
+
+        .hero-btns {
+            display: flex;
+            gap: 1rem;
+            margin-bottom: 2rem;
+        }
+
+        .btn {
+            padding: 0.8rem 1.5rem;
+            border-radius: 8px;
+            font-weight: 500;
+            display: inline-flex;
+            align-items: center;
+            gap: 0.5rem;
+            position: relative;
+            overflow: hidden;
+            transition: all 0.3s ease;
+        }
+
+        .btn-primary {
+            background: linear-gradient(45deg, #3498db, #2ecc71);
+            color: #fff;
+            border: none;
+        }
+
+        .btn-outline {
+            background: transparent;
+            border: 2px solid #3498db;
+            color: #3498db;
+        }
+
+        .btn:hover {
+            transform: translateY(-3px);
+            box-shadow: 0 5px 15px rgba(52, 152, 219, 0.2);
+        }
+
+        .hero-social {
+            display: flex;
+            gap: 1rem;
+        }
+
+        .social-icon {
+            width: 40px;
+            height: 40px;
+            border-radius: 8px;
+            background: #f8f9fa;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            color: #3498db;
+            transition: all 0.3s ease;
+            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+        }
+
+        .social-icon:hover {
+            background: #3498db;
+            color: #fff;
+            transform: translateY(-3px);
+        }
+
+        .hero-image-wrapper {
+            flex: 1;
+            position: relative;
+            animation: fadeInRight 1s ease-out;
+        }
+
+        .hero-image {
+            position: relative;
+            width: 400px;
+            height: 400px;
+            border-radius: 8px;
+            overflow: hidden;
+            box-shadow: 0 10px 30px rgba(0, 0, 0, 0.1);
+            border: none;
+        }
+
+        .hero-image img {
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+        }
+
+        .floating-elements {
+            position: absolute;
+            width: 100%;
+            height: 100%;
+            top: 0;
+            left: 0;
+        }
+
+        .floating-element {
+            position: absolute;
+            width: 50px;
+            height: 50px;
+            background: #fff;
+            border-radius: 8px;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            color: #3498db;
+            font-size: 1.5rem;
+            animation: floatElement 6s infinite;
+            box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+        }
+
+        .tech-icon:nth-child(1) { top: 20%; left: -20px; animation-delay: 0s; }
+        .tech-icon:nth-child(2) { top: 50%; right: -20px; animation-delay: 2s; }
+        .tech-icon:nth-child(3) { bottom: 20%; left: 20%; animation-delay: 4s; }
+        .tech-icon:nth-child(4) { top: 30%; right: 30%; animation-delay: 6s; }
+
+        .scroll-indicator {
+            position: absolute;
+            bottom: 2rem;
+            left: 50%;
+            transform: translateX(-50%);
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            gap: 1rem;
+            animation: fadeInUp 1s ease-out;
+        }
+
+        .mouse {
+            width: 30px;
+            height: 50px;
+            border: 2px solid #3498db;
+            border-radius: 15px;
+            position: relative;
+        }
+
+        .wheel {
+            width: 4px;
+            height: 8px;
+            background: #3498db;
+            border-radius: 2px;
+            position: absolute;
+            top: 8px;
+            left: 50%;
+            transform: translateX(-50%);
+            animation: scroll 2s infinite;
+        }
+
+        .arrow {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            gap: 5px;
+        }
+
+        .arrow span {
+            width: 10px;
+            height: 10px;
+            border-right: 2px solid #3498db;
+            border-bottom: 2px solid #3498db;
+            transform: rotate(45deg);
+            animation: arrowDown 2s infinite;
+        }
+
+        .arrow span:nth-child(2) { animation-delay: 0.2s; }
+        .arrow span:nth-child(3) { animation-delay: 0.4s; }
+
+        @keyframes floatElement {
+            0%, 100% { transform: translateY(0); }
+            50% { transform: translateY(-10px); }
+        }
+
+        @keyframes scroll {
+            0% { opacity: 1; transform: translateX(-50%) translateY(0); }
+            100% { opacity: 0; transform: translateX(-50%) translateY(20px); }
+        }
+
+        @keyframes arrowDown {
+            0% { opacity: 0; transform: rotate(45deg) translate(-5px, -5px); }
+            50% { opacity: 1; }
+            100% { opacity: 0; transform: rotate(45deg) translate(5px, 5px); }
+        }
+
+        @keyframes gradientFlow {
+            0% { background-position: 0% 50%; }
+            50% { background-position: 100% 50%; }
+            100% { background-position: 0% 50%; }
+        }
+
+        @keyframes blink {
+            0%, 100% { opacity: 1; }
+            50% { opacity: 0; }
+        }
+
+        @keyframes fadeInUp {
+            from { opacity: 0; transform: translateY(20px); }
+            to { opacity: 1; transform: translateY(0); }
+        }
+
+        @keyframes fadeInRight {
+            from { opacity: 0; transform: translateX(20px); }
+            to { opacity: 1; transform: translateX(0); }
+        }
+
+        /* Responsive Design */
+        @media (max-width: 1024px) {
+            .hero-content {
+                flex-direction: column;
+                text-align: center;
+                gap: 2rem;
+            }
+
+            .hero-description {
+                margin: 0 auto 2rem;
+            }
+
+            .hero-btns {
+                justify-content: center;
+            }
+
+            .hero-social {
+                justify-content: center;
+            }
+
+            .hero-image {
+                width: 300px;
+                height: 300px;
+            }
+        }
+
+        @media (max-width: 768px) {
+            .hero-name {
+                font-size: 3rem;
+            }
+
+            .hero-title {
+                font-size: 1.5rem;
+                flex-direction: column;
+                gap: 0.5rem;
+            }
+
+            .hero-image {
+                width: 250px;
+                height: 250px;
+            }
+        }
+
+        @media (max-width: 480px) {
+            .hero {
+                padding: 1rem;
+            }
+
+            .hero-name {
+                font-size: 2.5rem;
+            }
+
+            .hero-btns {
+                flex-direction: column;
+            }
+
+            .hero-image {
+                width: 200px;
+                height: 200px;
+            }
+        }
+
+        /* Projects Section Styles */
+        .projects-grid {
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+            gap: 2rem;
+            padding: 2rem 0;
+        }
+
         .project-link {
             text-decoration: none;
             color: inherit;
@@ -964,21 +1383,179 @@
             transform: translateY(-5px);
         }
 
-        .project-link:hover .project-card {
-            box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2);
+        .project-card {
+            background: #fff;
+            border-radius: 12px;
+            overflow: hidden;
+            transition: all 0.3s ease;
+            height: 100%;
+            display: flex;
+            flex-direction: column;
+            box-shadow: 0 4px 20px rgba(0, 0, 0, 0.08);
+        }
+
+        .project-card:hover {
+            box-shadow: 0 8px 30px rgba(52, 152, 219, 0.15);
+        }
+
+        .project-image {
+            position: relative;
+            width: 100%;
+            height: 200px;
+            overflow: hidden;
+        }
+
+        .project-image img {
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+            transition: transform 0.3s ease;
+        }
+
+        .project-card:hover .project-image img {
+            transform: scale(1.05);
+        }
+
+        .project-content {
+            padding: 1.5rem;
+            flex-grow: 1;
+            display: flex;
+            flex-direction: column;
+            background: #fff;
+        }
+
+        .project-content h3 {
+            color: #2c3e50;
+            font-size: 1.25rem;
+            margin-bottom: 0.5rem;
+            font-weight: 600;
+        }
+
+        .project-date {
+            color: #3498db;
+            font-size: 0.9rem;
+            font-weight: 500;
+            margin-bottom: 1rem;
+            display: block;
+        }
+
+        .project-content p {
+            color: #5d6d7e;
+            font-size: 0.95rem;
+            line-height: 1.6;
+            margin-bottom: 1.5rem;
+            flex-grow: 1;
+        }
+
+        .project-links {
+            margin-top: auto;
+            padding-top: 1rem;
+            border-top: 1px solid #e9ecef;
         }
 
         .github-link, .figma-link {
             display: inline-flex;
             align-items: center;
-            gap: 8px;
-            color: #007bff;
+            gap: 0.5rem;
+            color: #3498db;
             font-weight: 500;
+            font-size: 0.9rem;
+            transition: color 0.3s ease;
         }
 
-        .project-link:hover .github-link,
-        .project-link:hover .figma-link {
-            color: #0056b3;
+        .github-link i, .figma-link i {
+            font-size: 1.1rem;
+        }
+
+        .github-link:hover, .figma-link:hover {
+            color: #2980b9;
+        }
+
+        .section-title {
+            text-align: center;
+            margin-bottom: 3rem;
+        }
+
+        .section-title h2 {
+            color: #2c3e50;
+            font-size: 2.5rem;
+            font-weight: 700;
+            position: relative;
+            display: inline-block;
+            padding-bottom: 1rem;
+        }
+
+        .section-title h2::after {
+            content: '';
+            position: absolute;
+            bottom: 0;
+            left: 50%;
+            transform: translateX(-50%);
+            width: 80px;
+            height: 4px;
+            background: linear-gradient(45deg, #3498db, #2ecc71);
+            border-radius: 2px;
+        }
+
+        /* Tech decorations for projects section */
+        .tech-decoration {
+            position: absolute;
+            background: linear-gradient(45deg, #3498db, #2ecc71);
+            opacity: 0.05;
+            border-radius: 50%;
+            z-index: -1;
+        }
+
+        .tech-decoration-1 {
+            width: 300px;
+            height: 300px;
+            top: -150px;
+            right: -150px;
+        }
+
+        .tech-decoration-2 {
+            width: 200px;
+            height: 200px;
+            bottom: -100px;
+            left: -100px;
+        }
+
+        /* Responsive Design for Projects */
+        @media (max-width: 1200px) {
+            .projects-grid {
+                grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
+                gap: 1.5rem;
+            }
+        }
+
+        @media (max-width: 768px) {
+            .projects-grid {
+                grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+                gap: 1rem;
+            }
+
+            .section-title h2 {
+                font-size: 2rem;
+            }
+
+            .project-content h3 {
+                font-size: 1.1rem;
+            }
+
+            .project-image {
+                height: 180px;
+            }
+        }
+
+        @media (max-width: 480px) {
+            .projects-grid {
+                grid-template-columns: 1fr;
+            }
+
+            .project-card {
+                max-width: 400px;
+                margin: 0 auto;
+            }
         }
     </style>
 </body>
