--- a/index.html
+++ b/index.html
@@ -1367,9 +1367,11 @@
         /* Projects Section Styles */
         .projects-grid {
             display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-            gap: 2rem;
-            padding: 2rem 0;
+            grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
+            gap: 1.5rem;
+            padding: 1rem;
+            max-width: 1400px;
+            margin: 0 auto;
         }
 
         .project-link {
@@ -1377,6 +1379,7 @@
             color: inherit;
             display: block;
             transition: transform 0.3s ease;
+            height: 100%;
         }
 
         .project-link:hover {
@@ -1391,21 +1394,25 @@
             height: 100%;
             display: flex;
             flex-direction: column;
-            box-shadow: 0 4px 20px rgba(0, 0, 0, 0.08);
+            box-shadow: 0 4px 15px rgba(0, 0, 0, 0.05);
+            border: 1px solid #e9ecef;
         }
 
         .project-card:hover {
-            box-shadow: 0 8px 30px rgba(52, 152, 219, 0.15);
+            box-shadow: 0 8px 25px rgba(52, 152, 219, 0.1);
         }
 
         .project-image {
             position: relative;
             width: 100%;
-            height: 200px;
+            padding-top: 56.25%; /* 16:9 Aspect Ratio */
             overflow: hidden;
         }
 
         .project-image img {
+            position: absolute;
+            top: 0;
+            left: 0;
             width: 100%;
             height: 100%;
             object-fit: cover;
@@ -1417,7 +1424,7 @@
         }
 
         .project-content {
-            padding: 1.5rem;
+            padding: 1.25rem;
             flex-grow: 1;
             display: flex;
             flex-direction: column;
@@ -1426,30 +1433,31 @@
 
         .project-content h3 {
             color: #2c3e50;
-            font-size: 1.25rem;
+            font-size: 1.2rem;
             margin-bottom: 0.5rem;
             font-weight: 600;
+            line-height: 1.4;
         }
 
         .project-date {
             color: #3498db;
-            font-size: 0.9rem;
+            font-size: 0.85rem;
             font-weight: 500;
-            margin-bottom: 1rem;
+            margin-bottom: 0.75rem;
             display: block;
         }
 
         .project-content p {
             color: #5d6d7e;
-            font-size: 0.95rem;
-            line-height: 1.6;
-            margin-bottom: 1.5rem;
+            font-size: 0.9rem;
+            line-height: 1.5;
+            margin-bottom: 1rem;
             flex-grow: 1;
         }
 
         .project-links {
             margin-top: auto;
-            padding-top: 1rem;
+            padding-top: 0.75rem;
             border-top: 1px solid #e9ecef;
         }
 
@@ -1461,6 +1469,7 @@
             font-weight: 500;
             font-size: 0.9rem;
             transition: color 0.3s ease;
+            padding: 0.5rem 0;
         }
 
         .github-link i, .figma-link i {
@@ -1473,16 +1482,17 @@
 
         .section-title {
             text-align: center;
-            margin-bottom: 3rem;
+            margin-bottom: 2rem;
+            padding: 0 1rem;
         }
 
         .section-title h2 {
             color: #2c3e50;
-            font-size: 2.5rem;
+            font-size: 2rem;
             font-weight: 700;
             position: relative;
             display: inline-block;
-            padding-bottom: 1rem;
+            padding-bottom: 0.75rem;
         }
 
         .section-title h2::after {
@@ -1491,40 +1501,23 @@
             bottom: 0;
             left: 50%;
             transform: translateX(-50%);
-            width: 80px;
-            height: 4px;
+            width: 60px;
+            height: 3px;
             background: linear-gradient(45deg, #3498db, #2ecc71);
             border-radius: 2px;
         }
 
-        /* Tech decorations for projects section */
-        .tech-decoration {
-            position: absolute;
-            background: linear-gradient(45deg, #3498db, #2ecc71);
-            opacity: 0.05;
-            border-radius: 50%;
-            z-index: -1;
-        }
-
-        .tech-decoration-1 {
-            width: 300px;
-            height: 300px;
-            top: -150px;
-            right: -150px;
-        }
-
-        .tech-decoration-2 {
-            width: 200px;
-            height: 200px;
-            bottom: -100px;
-            left: -100px;
+        /* Remove floating elements */
+        .floating-elements {
+            display: none;
         }
 
         /* Responsive Design for Projects */
         @media (max-width: 1200px) {
             .projects-grid {
                 grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
-                gap: 1.5rem;
+                gap: 1.25rem;
+                padding: 1rem;
             }
         }
 
@@ -1532,29 +1525,84 @@
             .projects-grid {
                 grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
                 gap: 1rem;
+                padding: 0.75rem;
+            }
+
+            .section-title {
+                margin-bottom: 1.5rem;
             }
 
             .section-title h2 {
-                font-size: 2rem;
+                font-size: 1.75rem;
+            }
+
+            .project-content {
+                padding: 1rem;
             }
 
             .project-content h3 {
                 font-size: 1.1rem;
             }
 
-            .project-image {
-                height: 180px;
+            .project-content p {
+                font-size: 0.85rem;
+            }
+
+            .github-link, .figma-link {
+                font-size: 0.85rem;
             }
         }
 
         @media (max-width: 480px) {
             .projects-grid {
                 grid-template-columns: 1fr;
+                gap: 1rem;
+                padding: 0.5rem;
             }
 
             .project-card {
-                max-width: 400px;
-                margin: 0 auto;
+                max-width: 100%;
+            }
+
+            .section-title h2 {
+                font-size: 1.5rem;
+            }
+
+            .project-content h3 {
+                font-size: 1rem;
+            }
+
+            .project-date {
+                font-size: 0.8rem;
+            }
+
+            .project-content p {
+                font-size: 0.8rem;
+                margin-bottom: 0.75rem;
+            }
+
+            .github-link, .figma-link {
+                font-size: 0.8rem;
+                padding: 0.4rem 0;
+            }
+        }
+
+        /* Add touch-friendly styles for mobile */
+        @media (hover: none) {
+            .project-link:hover {
+                transform: none;
+            }
+
+            .project-card:hover {
+                box-shadow: 0 4px 15px rgba(0, 0, 0, 0.05);
+            }
+
+            .project-card:active {
+                transform: translateY(-2px);
+            }
+
+            .github-link:active, .figma-link:active {
+                opacity: 0.8;
             }
         }
     </style>
