--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                         <i class="fas fa-paper-plane"></i> Contact Me
                         <span class="btn-shine"></span>
                     </a>
-                    <a href="images/M.A.PasindyaChavindee-SLIIT(CV).pdf" download class="btn btn-outline">
+                    <a href="images/CV_Pasindya_SLIIT.pdf" download class="btn btn-outline">
                         <i class="fas fa-download"></i> Download CV
                         <span class="btn-shine"></span>
                     </a>
