--- a/index.html
+++ b/index.html
@@ -673,9 +673,12 @@
                 <span class="experience-date">Jan 2025 - Present</span>
                 <p class="experience-company">Sri Lanka Telecome </p>
                 <ul class="experience-details">
-                    <li>Worked as technical supporter in BOC Panadura City Branch under QMS project </li>
-                    <li>Currently work on DRS project by doing manual & automation testing</li>
-                    <li>Working on MYSLT app project doing API testing</li>
+                    <li>Worked on Debt Recovery System (DRS)  project performing test case writing, API testing, UI testing and
+ performance testing using tools like Rest Assured, Postman, Selenium and JMeter to ensure software
+ quality and reliability . </li>
+                    <li>Worked as technical supporter in BOC Panadura City Branch under QMS project</li>
+                    <li> Working on MYSLT app project doing API testing  using postman & API automation using Rest Assured .</li>
+                    <li>Sales Incentive System (SIS) projects performing test case writing</li>
                 </ul>
             </div>
         </div>
