--- a/index.html
+++ b/index.html
@@ -62,6 +62,10 @@
                         <i class="fas fa-download"></i> Download CV
                         <span class="btn-shine"></span>
                     </a>
+                    <a href="images/Cover letter -Pasindya_QA.pdf" download class="btn btn-outline">
+                        <i class="fas fa-download"></i> Download Cover Letter
+                        <span class="btn-shine"></span>
+                    </a>
                 </div>
                 <div class="hero-social">
                     <a href="https://www.linkedin.com/in/pasindya-chavindee-00342223a/" target="_blank" class="social-icon">
