--- a/index.html
+++ b/index.html
@@ -279,6 +279,23 @@
         <div class="tech-decoration tech-decoration-1"></div>
         <div class="tech-decoration tech-decoration-2"></div>
         <div class="projects-grid">
+            <a href="https://github.com/Pasindya/QA-Knowledge-Sharing-Documents" target="_blank" rel="noopener noreferrer" class="project-link">
+                <div class="project-card glass-card">
+                    <div class="project-image">
+                        <img src="images/QA (2).png" alt="Travel App Project" loading="lazy">
+                    </div>
+                    <div class="project-content">
+                        <h3>QA documents</h3>
+                        <span class="project-date"></span>
+                        <p>A collection of QA-focused presentations and documents I created and delivered during my internship at Sri Lanka Telecom. Covers practical topics in software testing, automation, and QA best practices.</p>
+                        <div class="project-links">
+                            <span class="github-link">
+                                <i class="fab fa-github"></i> View on GitHub
+                            </span>
+                        </div>
+                    </div>
+                </div>
+            </a>
             <a href="https://github.com/Pasindya/ITPM-Project-MernStack" target="_blank" rel="noopener noreferrer" class="project-link">
                 <div class="project-card glass-card">
                     <div class="project-image">
