--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
                 </div>
             </div>
             <div class="about-image">
-                <img src="images/meprof.jpg" alt="Pasindya Chavindee" loading="lazy">
+                <img src="images/myprofilr.jpg" alt="Pasindya Chavindee" loading="lazy">
             </div>
         </div>
     </section>
@@ -695,7 +695,7 @@
                 <p class="experience-company">Sri Lanka Telecome </p>
                 <ul class="experience-details">
                     <li>Worked on Debt Recovery System (DRS)  project performing test case writing, API testing, UI testing and
- performance testing using tools like Rest Assured, Postman, Selenium and JMeter to ensure software
+ performance testing using tools like Rest Assured, Postman, Selenium,Playwright,Appium  and JMeter to ensure software
  quality and reliability . </li>
                     <li>Worked as technical supporter in BOC Panadura City Branch under QMS project</li>
                     <li> Working on MYSLT app project doing API testing  using postman & API automation using Rest Assured .</li>
