--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                         <span class="dynamic-text"></span>
                     </h2>
                 </div>
-                <p class="hero-description">I'm a passionate second-year undergraduate at SLIIT with expertise in MERN stack, Kotlin, and mobile development. I thrive on creating innovative solutions to real-world problems.</p>
+                <p class="hero-description">I'm a passionate third-year undergraduate at SLIIT with expertise in MERN stack, Kotlin, and mobile development. I thrive on creating innovative solutions to real-world problems.</p>
                 <div class="hero-btns">
                     <a href="#contact" class="btn btn-primary">
                         <i class="fas fa-paper-plane"></i> Contact Me
@@ -282,7 +282,7 @@
             <a href="https://github.com/Pasindya/QA-Knowledge-Sharing-Documents" target="_blank" rel="noopener noreferrer" class="project-link">
                 <div class="project-card glass-card">
                     <div class="project-image">
-                        <img src="images/QA (2).png" alt="Travel App Project" loading="lazy">
+                        <img src="images/test.jpg" alt="Travel App Project" loading="lazy">
                     </div>
                     <div class="project-content">
                         <h3>QA documents</h3>
@@ -299,7 +299,7 @@
             <a href="https://github.com/Pasindya/ITPM-Project-MernStack" target="_blank" rel="noopener noreferrer" class="project-link">
                 <div class="project-card glass-card">
                     <div class="project-image">
-                        <img src="images/travel.png" alt="Travel App Project" loading="lazy">
+                        <img src="images/traveltrails.png" alt="Travel App Project" loading="lazy">
                     </div>
                     <div class="project-content">
                         <h3>Traveling web app</h3>
@@ -422,10 +422,28 @@
                 </div>
             </a>
 
+             <a href="https://www.figma.com/design/RVFwKBo0Hd6hLClaDkabHv/pizza?node-id=199-239&t=5Z7FcytGZjhcrf60-1" target="_blank" rel="noopener noreferrer" class="project-link">
+                <div class="project-card glass-card">
+                    <div class="project-image">
+                        <img src="images/pizzao.png" alt="Pizza odering mobile app UI" loading="lazy">
+                    </div>
+                    <div class="project-content">
+                        <h3>UI Design for Pizza odering UI</h3>
+                        <span class="project-date">DEC 2023</span>
+                        <p>Interactive web design using Figma.</p>
+                        <div class="project-links">
+                            <span class="figma-link">
+                                <i class="fab fa-figma"></i> View on Figma
+                            </span>
+                        </div>
+                    </div>
+                </div>
+            </a>
+
             <a href="https://github.com/Pasindya/MyTaskSchedulerApp" target="_blank" rel="noopener noreferrer" class="project-link">
                 <div class="project-card glass-card">
                     <div class="project-image">
-                        <img src="images/pizzaui.png" alt="Task Scheduler App" loading="lazy">
+                        <img src="images/task.png" alt="Task Scheduler App" loading="lazy">
                     </div>
                     <div class="project-content">
                         <h3>Task Scheduler App</h3>
