--- a/index.html
+++ b/index.html
@@ -708,7 +708,7 @@
                 <img src="images/tel.jpg" alt="Company Name">
             </div>
             <div class="experience-content">
-                <h3>Intern QA Engineer</h3>
+                <h3>Intern Quality Assurance Engineer</h3>
                 <span class="experience-date">Jan 2025 - Present</span>
                 <p class="experience-company">Sri Lanka Telecome </p>
                 <ul class="experience-details">
