--- a/index.html
+++ b/index.html
@@ -506,6 +506,27 @@
     <div class="tech-decoration tech-decoration-1"></div>
     <div class="tech-decoration tech-decoration-2"></div>
     <div class="certificates-container">
+
+<!-- Certificate 1 -->
+        <div class="glass-card certificate-card">
+            <div class="certificate-image">
+                <img src="images/hnd.jpg" alt="HND Certificate" class="certificate-img" loading="lazy">
+            </div>
+            <div class="certificate-content">
+                <div class="certificate-header">
+                    <h3 class="certificate-title">Higher Diploma in Information Technology</h3>
+                    <span class="certificate-date">Jan 2025</span>
+                </div>
+                <p class="certificate-issuer">SLIIT</p>
+                <p class="certificate-description">Information Technology</p>
+                <a href="https://www.linkedin.com/in/pasindya-chavindee-00342223a/details/certifications/1752254055056/single-media-viewer/?profileId=ACoAADuBv4MBGK6kKvzbG5VdkovCfMK_ujJ987k" target="_blank" rel="noopener noreferrer" class="certificate-link">
+                    <i class="fas fa-external-link-alt"></i> View Certificate
+                </a>
+            </div>
+        </div>
+
+
+
         <!-- Certificate 1 -->
         <div class="glass-card certificate-card">
             <div class="certificate-image">
