--- a/index.html
+++ b/index.html
@@ -771,13 +771,24 @@
                 </div>
             </div>
         </div>
+
+        <div class="ladder-rung">
+            <div class="rung-date">2022-2023</div>
+            <div class="rung-content glass-card">
+                <div class="rung-icon"><i class="fas fa-award"></i></div>
+                <div class="rung-details">
+                    <h3>Higher Diploma In Information Technology</h3>
+                    <p class="institution">Sri Lanka Institute of Information Technology</p>
+                </div>
+            </div>
+        </div>
         
         <div class="ladder-rung">
             <div class="rung-date">2022</div>
             <div class="rung-content glass-card">
                 <div class="rung-icon"><i class="fas fa-certificate"></i></div>
                 <div class="rung-details">
-                    <h3>Professional English & IT</h3>
+                    <h3>Professional Certificate English & IT</h3>
                     <p class="institution">Aquinas College of Higher Studies</p>
                 </div>
             </div>
