--- a/index.html
+++ b/index.html
@@ -303,7 +303,7 @@
                     </div>
                     <div class="project-content">
                         <h3>Traveling web app</h3>
-                        <span class="project-date">FEB 2025 - PRESENT</span>
+                        <span class="project-date">FEB 2025 - JUL 2025</span>
                         <p>Group project under ITPM module where I served as the group leader. We implemented this project using MERN Stack.</p>
                         <div class="project-links">
                             <span class="github-link">
@@ -726,19 +726,38 @@
     <div class="experience-container">
         <div class="glass-card experience-card">
             <div class="experience-image">
+                <img src="images/dialog.png" alt="Company Name">
+            </div>
+            <div class="experience-content">
+                <h3>Coordinator – BSS & Fintech Operations</h3>
+                <span class="experience-date">Aug 2025 -  Present</span>
+                <p class="experience-company"> Dialog Axiata PLC – Colombo, Sri Lanka </p>
+                <ul class="experience-details">
+                    <li>Coordinating Business Support Systems (BSS) and Fintech operations to ensure smooth service
+ delivery.  </li>
+                    <li>Supporting digital financial services by monitoring operations and troubleshooting issues.</li>
+                    <li>  Collaborating with cross-functional teams to optimize workflow efficiency.</li>
+                    <li> Preparing reports, documentation, and operational updates for management.</li>
+                </ul>
+            </div>
+        </div>
+
+        <div class="glass-card experience-card">
+            <div class="experience-image">
                 <img src="images/tel.jpg" alt="Company Name">
             </div>
             <div class="experience-content">
                 <h3>Intern Quality Assurance Engineer</h3>
-                <span class="experience-date">Jan 2025 - Present</span>
-                <p class="experience-company">Sri Lanka Telecome </p>
+                <span class="experience-date">Jan 2025 - Jul 2025</span>
+                <p class="experience-company">Sri Lanka Telecome – Colombo, Sri Lanka </p>
                 <ul class="experience-details">
                     <li>Worked on Debt Recovery System (DRS)  project performing test case writing, API testing, UI testing and
  performance testing using tools like Rest Assured, Postman, Selenium,Playwright, Browser Stack , OWASP ZAP, JIRA  and JMeter to ensure software
  quality and reliability . </li>
-                    <li>Worked as technical supporter in BOC Panadura City Branch under QMS project</li>
-                    <li> Working on MYSLT app project doing API testing  using postman & API automation using Rest Assured .</li>
-                    <li>Sales Incentive System (SIS) projects performing test case writing</li>
+                    <li>Worked as technical supporter in BOC Panadura City Branch (2025/02/27- 2025/03/05) under
+ Queue Management System project </li>
+                    <li>  Collaborated with developers to resolve issues of MYSLT APP website and improve performance </li>
+                    
                 </ul>
             </div>
         </div>
