--- a/index.html
+++ b/index.html
@@ -321,7 +321,7 @@
                     </div>
                     <div class="project-content">
                         <h3>Skill Sharing WebApp</h3>
-                        <span class="project-date">MAR 2025 - PRESENT </span>
+                        <span class="project-date">MAR 2025 - JUL 2025 </span>
                         <p>Group project under PAF module where I served as the group leader. We implemented this project using SpringBoot + React vite using mongodb.</p>
                         <div class="project-links">
                             <span class="github-link">
